crates/zizmor/tests/integration/snapshots/integration__snapshot__undocumented_permissions.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 876
expression: "zizmor().input(input_under_test(\"undocumented-permissions.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:7:3
  |
7 |   contents: write
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:7:3
  |
7 |   contents: write
  |   ^^^^^^^^^^^^^^^ needs an explanatory comment
8 |   packages: read
  |   ^^^^^^^^^^^^^^ needs an explanatory comment
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:33:7
   |
33 |       contents: write
   |       ^^^^^^^^^^^^^^^ needs an explanatory comment
34 |       packages: write
   |       ^^^^^^^^^^^^^^^ needs an explanatory comment
35 |       actions: write
   |       ^^^^^^^^^^^^^^ needs an explanatory comment
   |
   = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:48:7
   |
48 |       packages: write #
   |       ^^^^^^^^^^^^^^^ needs an explanatory comment
49 |       actions: write  #    
   |       ^^^^^^^^^^^^^^ needs an explanatory comment
   |
   = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:60:7
   |
60 |       metadata: read
   |       ^^^^^^^^^^^^^^ needs an explanatory comment
61 |       packages: write #
   |       ^^^^^^^^^^^^^^^ needs an explanatory comment
   |
   = note: audit confidence → High

5 findings: 0 informational, 4 low, 0 medium, 1 high
